# reduce-code-pra1788

./: .gitignore  CMakeLists.txt  README.md  brightener.cpp  brightener.h  image.cpp  image.h
brightening-test/: brightening-test.cpp
